<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".GameScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_story"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="5"
            app:srcCompat="@drawable/skizz"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/tv_story"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="30dp"
            android:layout_weight="4"
            android:text="@string/placeholder"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_choice_1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_weight="1.5"
            android:backgroundTint="@color/white"
            android:text="@string/btn_choice_1"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_choice_2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_weight="1.5"
            android:backgroundTint="@color/white"
            android:text="@string/btn_choice_2"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_choice_3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_weight="1.5"
            android:backgroundTint="@color/white"
            android:text="@string/btn_choice_3"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_choice_4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="50dp"
            android:layout_weight="1.5"
            android:backgroundTint="@color/white"
            android:text="@string/btn_choice_4"
            android:textColor="@color/black" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>